--- a/write_up.tex
+++ b/write_up.tex
@@ -119,12 +119,12 @@ I would like to thank the following people:
 \let\thefootnote\relax\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
 \pagebreak
 
-%\import{parts/}{background.tex}
-%\import{parts/}{motiondetect.tex}
-%\import{parts/}{timelapse.tex}
-%\import{parts/}{ipstreamer.tex}
-%\import{parts/}{userinterfaces.tex}
-%\import{parts/}{release.tex}
+\import{parts/}{background.tex}
+\import{parts/}{motiondetect.tex}
+\import{parts/}{timelapse.tex}
+\import{parts/}{ipstreamer.tex}
+\import{parts/}{userinterfaces.tex}
+\import{parts/}{release.tex}
 
 \part{Bibliography}
 
