--- a/parts/motiondetect.tex
+++ b/parts/motiondetect.tex
@@ -891,5 +891,56 @@ bool validKernel() \{
 \end{lstlisting}
  However the root of the problem turned out to be that I was not initializing the camera properly when I started the thread, and so when I fixed this problem, the validKernel() function became redundant and I deleted it from the source.
 
+\begin{thebibliography}{9}
+
+\bibitem{fcamdoc}
+Adams, A., Talvala, E., Park, S. H., Jacobs, D. E., Ajdin, B., Gelfand, N., Dolson, J., Vaquero, D., Baek, J., Tico, M., Lensch, H. P., Matusik, W., Pulli, K., Horowitz, M., and Levoy, M -  The Frankencamera: an experimental platform for computational photography, ACM SIGGRAPH 2010 \url{http://doi.acm.org/10.1145/1833349.1778766} Page~\pageref{ref:fcamdoc}
+
+\bibitem{snavelly}
+Noah Snavelly, Introduction to Computer Vision,
+Cornell University, New York
+\url{http://www.cs.cornell.edu/courses/cs4670/2010fa/}
+Page~\pageref{ref:snavelly}
+
+\bibitem{libcv}
+Maemo Packages - LibCV \url{http://maemo.org/packages/view/libcv-dev/}
+Page~\pageref{ref:libcv}
+
+\bibitem{depbug}
+Oliver Hookins, Missing dependencies bug, Maemo mail lists
+\url{http://lists.maemo.org/pipermail/maemo-developers/2011-August/028583.html}
+Page ~\pageref{ref:depbug}
+
+\bibitem{cimgipl}
+Hon-Kwok Fung, CIMG IPL conversion class header text
+\url{http://sph2grid.googlecode.com/svn-history/r14/trunk/CImg/plugins/cimg_ipl.h}
+Page~\pageref{ref:cimgipl}
+
+\bibitem{slotbug}
+QML Signals and signal hander miscategorization, Qt Bug reports
+\url{https://bugreports.qt-project.org/browse/QTBUG-17072}
+Page~\pageref{ref:slotbug}
+
+\bibitem{qtmobbug}
+QtMobility bugs
+\url{http://www.developer.nokia.com/Community/Discussion/showthread.php?201846-Sending-Email-Using-Qt-Mobility}
+Page~\pageref{ref:qtmobbug}
+
+\bibitem{qtcp}
+“Brian G”, Creating and sending email with Qt, Qt Mail Lists
+\url{http://lists.trolltech.com/qt-interest/2006-10/thread01158-0.html}
+Page~\pageref{ref:qtcp}
+
+\bibitem{mailcmd}
+Nicolai’s Mailcmd Announce page
+\url{http://talk.maemo.org/showthread.php?t=82918}
+Page~\pageref{ref:mailcmd}
+
+\bibitem{fcamapi}
+Eino-Ville Talvala, Andrew Adams et al, FCam API Documentatio and Examples
+\url{http://fcam.garage.maemo.org/examples.html}
+Page~\pageref{ref:fcamapi}
+
+\end{thebibliography}
 
 \end{document}
